# r5560_sdk

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.in  R5560_SDKApp.sln  README.md  build_packages.sh  compile_all_architecures.sh  compile_all_architecures.sh_old  compile_deb.sh  compile_for_zynq.sh  configure  configure.ac  libr5560-0.1.1.0-x64.deb  ni-release-linux.yaml  ni-release-windows.yaml  ni-release-zynq.yaml  ni-release.yaml
BIN64/: R5560_SDKLib.exp  R5560_SDKLib.iobj  R5560_SDKLib.ipdb  R5560_SDKLib.lib
BIN64d/: R5560_SDKLib.exp  R5560_SDKLib.iobj  R5560_SDKLib.ipdb  R5560_SDKLib.lib
BINd/: R5560_SDKLib.exp  R5560_SDKLib.lib
R5560_SDKApp/: Makefile.am  R5560_SDKApp.cpp  R5560_SDKApp.vcxproj  r5560sdk_libtest.mk  stdafx.h
R5560_SDKLib/: Makefile.am  Makefile.in  R5560_SDKLib.cpp  R5560_SDKLib.h  R5560_SDKLib.vcxproj  R5560_SDKLib.vcxproj.filters  libr5560.mk  libzmq-v140-mt-4_3_4.lib  libzmq-v140-mt-4_3_4_x64.lib
arm_build/: armv7-a-linux-gnu-libtool  config.status
arm_build/R5560_SDKLib/: R5560_SDKLib.lo  libr5560.la
arm_build/R5560_SDKLib/.deps/: R5560_SDKLib.Plo
arm_build/R5560_SDKLib/.libs/: libr5560.la  libr5560.so.1.1.0
arm_build/output/lib/: libr5560.la
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
linux/: libr5560.so.1.0.0  r5560sdk_libtest
